# VoteMachine

./: Cargo.toml  README.md  deny.toml
src/: entry.rs  errors.rs  lib.rs  state_machine.rs  tally.rs  threshold.rs  types.rs  vote_type.rs
