[package]
name = "vote-machine"
version = "1.0.0"
edition = "2021"
authors = ["Wasmium Network Developers <hq@wasmium.network>"]
publish = false
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.1"
borsh = "0.9.3"
ed25519-dalek = { version = "1.0.1", features = [
    "u64_backend",
], default-features = false }
hex = "0.4.3"
tai64 = "4.0.0"

[dev-dependencies]
ed25519-dalek = { version = "1.0.1" }
rand = "0.7"
